getting liquidity positions
